eks/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-service
  labels:
    app.kubernetes.io/part-of: toggle-master
---
apiVersion: v1
kind: Namespace
metadata:
  name: flag-service
  labels:
    app.kubernetes.io/part-of: toggle-master
---
apiVersion: v1
kind: Namespace
metadata:
  name: targeting-service
  labels:
    app.kubernetes.io/part-of: toggle-master
---
apiVersion: v1
kind: Namespace
metadata:
  name: evaluation-service
  labels:
    app.kubernetes.io/part-of: toggle-master
---
apiVersion: v1
kind: Namespace
metadata:
  name: analytics-service
  labels:
    app.kubernetes.io/part-of: toggle-master
